<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_register">


    <EditText
        android:id="@+id/usernameSignUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="588dp"
        android:gravity="center"
        android:hint="@string/username"
        android:inputType="text"
        android:selectAllOnFocus="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.142" />

    <EditText
        android:id="@+id/passwordSignUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:gravity="center"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameSignUp" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.41"
        tools:layout_editor_absoluteX="0dp">

        <Button
            android:id="@+id/register"
            android:layout_width="154dp"
            android:layout_height="55dp"
            android:layout_gravity="start"
            android:layout_marginTop="32dp"
            android:enabled="true"
            android:text="@string/register"
            android:background="@color/green_4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordSignUp" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="154dp"
            android:layout_height="55dp"
            android:layout_gravity="start"
            android:layout_marginTop="40dp"
            android:layout_marginStart="30dp"
            android:enabled="true"
            android:text="@string/cancel"
            android:background="@color/green_4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.898"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordSignUp" />


    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.constraintlayout.widget.ConstraintLayout>